kic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
        - path: /maitre-gims
          pathType: ImplementationSpecific
          backend:
            service:
              name: maitre-gims-service
              port:
                number: 3000
        - path: /angele
          pathType: ImplementationSpecific
          backend:
            service:
              name: angele-service
              port:
                number: 3000
